--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "lenovo/project1",
     "autoload": {
        "files": [
-            "includes/funtions.php"
+            "./includes/functions.php"
        ]
     },
     "authors": [
