--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,7 @@
             "email": "davidaebenda@gmail.com"
         }
     ],
-    "require": {}
+    "require-dev": {
+        "symfony/var-dumper": "^7.1"
+    }
 }
